--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.36.0",
     "vitest": "^0.29.7"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3"
   }
 }
